--- a/index.html
+++ b/index.html
@@ -352,5 +352,44 @@
           </div>
         </section>
     </main>
+    <section class="bg-gray-500">
+      <footer class="footer max-w-screen-xl mx-auto text-base-content p-10">
+        <nav class="text-lg text-white">
+          <h6 class="footer-title">Services</h6>
+          <a class="link link-hover">Branding</a>
+          <a class="link link-hover">Design</a>
+          <a class="link link-hover">Marketing</a>
+          <a class="link link-hover">Advertisement</a>
+        </nav>
+        <nav class="text-lg text-white">
+          <h6 class="footer-title">Company</h6>
+          <a class="link link-hover">About us</a>
+          <a class="link link-hover">Contact</a>
+          <a class="link link-hover">Jobs</a>
+          <a class="link link-hover">Press kit</a>
+        </nav>
+        <nav class="text-lg text-white">
+          <h6 class="footer-title">Legal</h6>
+          <a class="link link-hover">Terms of use</a>
+          <a class="link link-hover">Privacy policy</a>
+          <a class="link link-hover">Cookie policy</a>
+        </nav>
+        <form>
+          <h6 class="footer-title text-lg text-white">Newsletter</h6>
+          <fieldset class="form-control w-80">
+            <label class="label">
+              <span class="label-text text-lg text-white">Enter your email address</span>
+            </label>
+            <div class="join">
+              <input
+                type="text"
+                placeholder="Email Address"
+                class="input input-bordered join-item" />
+              <button class="btn text-white join-item bg-[#B68C5A]"><i class="fa-solid fa-paper-plane"></i></button>
+            </div>
+          </fieldset>
+        </form>
+      </footer>
+    </section>
 </body>
 </html>
