--- a/index.html
+++ b/index.html
@@ -209,30 +209,85 @@
         </section>
 
         <section class="mt-24 mb-24 px-3">
-            <div>
-                <div class="carousel w-full">
-                    <div id="slide1" class="carousel-item relative w-full opacity-60">
-                     <div>
-                        <img
-                        src="images/slider-1.jpg"
-                        class="w-full" />
-                     </div>
-                     <div class="z-10">
-                        <div class="avatar">
-                            <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2 absolute -left-64">
-                              <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
-                            </div>
-                          </div>
-                     </div>
-                      <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                        <a href="#slide4" class="btn btn-circle bg-transparent text-white border-none">❮</a>
-                        <a href="#slide2" class="btn btn-circle bg-transparent text-white border-none">❯</a>
+          <div class="carousel w-full rounded-lg">
+            <div id="slide1" class="carousel-item relative w-full">
+              <div
+                  class="hero h-[500px]"
+                  style="background-image: url(images/slider-1.jpg);">
+                  <div class="hero-overlay bg-opacity-60"></div>
+                  <div class="hero-content text-neutral-content text-center">
+                    <div class="max-w-md">
+                      <div class="avatar mb-5">
+                        <div class="ring-primary ring-offset-base-100 w-20 rounded-full ring ring-offset-2">
+                          <img src="images/me.jpg" />
+                        </div>
                       </div>
-                      
-                    </div>
-                    
-                  </div>
+                      <h4 class="mb-5 text-2xl font-bold">Mahfuz</h4>
+                      <p class="mb-5 text-base">
+                        Web Developer
+                      </p>
+                      <p class="text-base">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                </div>
+              </div>
             </div>
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide4" class="btn btn-circle bg-transparent border-none text-white">❮</a>
+                <a href="#slide2" class="btn btn-circle bg-transparent border-none text-white">❯</a>
+              </div>
+            </div>
+            <div id="slide2" class="carousel-item relative w-full">
+              <div
+                  class="hero h-[500px]"
+                  style="background-image: url(images/slider-2.jpg);">
+                  <div class="hero-overlay bg-opacity-60"></div>
+                  <div class="hero-content text-neutral-content text-center">
+                    <div class="max-w-md">
+                      <div class="avatar mb-5">
+                        <div class="ring-primary ring-offset-base-100 w-20 rounded-full ring ring-offset-2">
+                          <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+                        </div>
+                      </div>
+                      <h4 class="mb-5 text-2xl font-bold">Shanto</h4>
+                      <p class="mb-5 text-base">
+                        Web Designer
+                      </p>
+                      <p class="text-base">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                </div>
+              </div>
+            </div>
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide1" class="btn btn-circle bg-transparent border-none text-white">❮</a>
+                <a href="#slide3" class="btn btn-circle bg-transparent border-none text-white">❯</a>
+              </div>
+            </div>
+            <div id="slide3" class="carousel-item relative w-full">
+              <div
+                  class="hero h-[500px]"
+                  style="background-image: url(images/slider-3.jpg);">
+                  <div class="hero-overlay bg-opacity-60"></div>
+                  <div class="hero-content text-neutral-content text-center">
+                    <div class="max-w-md">
+                      <div class="avatar mb-5">
+                        <div class="ring-primary ring-offset-base-100 w-20 rounded-full ring ring-offset-2">
+                          <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+                        </div>
+                      </div>
+                      <h4 class="mb-5 text-2xl font-bold">Mahfuz</h4>
+                      <p class="mb-5 text-base">
+                        Web Developer
+                      </p>
+                     <div>
+                      <p class="text-base">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                     </div>
+                </div>
+              </div>
+            </div>
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide2" class="btn btn-circle bg-transparent border-none text-white">❮</a>
+                <a href="#slide1" class="btn btn-circle bg-transparent border-none text-white">❯</a>
+              </div>
+            </div>
+          </div>
         </section>
 
         <section class="mt-24 mb-24 px-3">
